# bmi-prms6-surface

./: .gitignore  .travis.yml  CMakeLists.txt  License.md  README.md
bmi_prms_surface/: bmi_prms_surface.sln
bmi_prms_surface/bmi_prms_surface/: bmi_prms_surface.u2d  bmi_prms_surface.vfproj
bmi_prms_surface/irf_ex/: .gitignore  gwflow.wbal  intcp.wbal  irf_ex.u2d  irf_ex.vfproj  snowcomp.wbal  soilzone.wbal  waterbal.wbal  wbal.msgs
bmi_prms_surface/irf_ex/output/: sum_test.txt  summary_daily.nc
bmi_prms_surface/test_get_grid_x/: .gitignore  test_get_grid_x.vfproj
bmi_prms_surface/test_get_grid_x/pipestem/: .gitignore  control.simple1  control_groundwater.simple1  control_soil.simple1  control_streamflow.simple1  control_surface.simple1
bmi_prms_surface/test_get_value/: .gitignore  gwflow.wbal  intcp.wbal  snowcomp.wbal  soilzone.wbal  test_get_value.vfproj  waterbal.wbal  wbal.msgs
bmi_prms_surface/test_get_value/output/: summary_daily.nc
bmi_prms_surface/test_get_value_at_indices/: test_get_value_at_indices.vfproj
bmi_prms_surface/test_get_value_ptr/: .gitignore  test_get_value_ptr.vfproj  wbal.msgs
bmi_prms_surface/test_set_value/: .gitignore  test_set_value.vfproj
bmi_prms_surface/test_set_value_at_indices/: .gitignore  test_set_value_at_indices.vfproj
examples/: CMakeLists.txt  irf_ex.f90  testing_helpers.f90
projects/pipestem/: .gitignore  control.default  control.simple1  control.simple1x  control.simple1y  control_surface.simple1
src/: CMakeLists.txt  bmi.f90  bmi_prms_surface.f90  m_prms_surface.f90
tests/: CMakeLists.txt  CMakeLists.txt.0  fixtures.f90  test_finalize.f90  test_get_component_name.f90  test_get_current_time.f90  test_get_end_time.f90  test_get_grid_edge_count.f90  test_get_grid_edge_nodes.f90  test_get_grid_face_count.f90  test_get_grid_face_edges.f90  test_get_grid_face_nodes.f90  test_get_grid_node_count.f90  test_get_grid_nodes_per_face.f90  test_get_grid_origin.f90  test_get_grid_rank.f90  test_get_grid_shape.f90  test_get_grid_size.f90  test_get_grid_spacing.f90  test_get_grid_type.f90  test_get_grid_x.f90  test_get_grid_y.f90  test_get_grid_z.f90  test_get_input_item_count.f90  test_get_input_var_names.f90  test_get_output_item_count.f90  test_get_output_var_names.f90  test_get_start_time.f90  test_get_time_step.f90  test_get_time_units.f90  test_get_value.f90  test_get_value_at_indices.f90  test_get_value_ptr.f90  test_get_var_grid.f90  test_get_var_itemsize.f90  test_get_var_location.f90  test_get_var_nbytes.f90  test_get_var_type.f90  test_get_var_units.f90  test_initialize.f90  (+4 more)
